--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,11 @@ serde = { version = "1.0.217", features = ["derive"] }
 ron = "0.8.1"
 lazy_static = "1.5.0"
 enum-derived = "0.8.2"
-
-[build-dependencies]
-ron = "0.8.1"
-serde = { version = "1.0.217", features = ["derive"] }
+sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
+tokio = { version = "1.43.0", features = ["full"] }
+anyhow = "1.0.95"
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
+regex = "1.11.1"
+csv = "1.3.1"
+chrono = "0.4.39"
