--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,8 @@ sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
 tokio = { version = "1.43.0", features = ["full"] }
 anyhow = "1.0.95"
 tracing = "0.1.41"
-tracing-subscriber = "0.3.19"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 regex = "1.11.1"
 csv = "1.3.1"
 chrono = "0.4.39"
+enum-iterator = "2.1.0"
