--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "merchant_inv_generator"
+name = "merchant"
 version = "0.1.0"
 edition = "2021"
 
@@ -19,4 +19,4 @@ regex = "1.11.1"
 csv = "1.3.1"
 chrono = "0.4.39"
 enum-iterator = "2.1.0"
-clap = "4.5.26"
+clap = { version = "4.5.26", features = ["derive"] }
